develop controller for company, job, candidate

--- a/CV-backend/CV-backend/CV-backend.csproj
+++ b/CV-backend/CV-backend/CV-backend.csproj
@@ -19,8 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Core\DTOs\Job\" />
-    <Folder Include="Core\DTOs\Candidate\" />
+    <Folder Include="Documents\pdfs\" />
   </ItemGroup>
 
 </Project>
